# quant-portfolios

./: .gitignore  README.md  backtest.ipynb  backtest.py  factor_index.py  main.py  pyproject.toml  requirements.txt  risk_parity.py  sparse.py  ticker_data.json  tickers.json
.github/workflows/: daily.yml
src/: funcs.py
