[project]
name = "quant-portfolios"
version = "0.0.1"
requires-python = ">=3.11, <3.12"

[dependency-groups]
default = [
    "ipykernel>=7.1.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-datareader",
    "requests",
    "yfinance",
]
optional = [
    "riskparityportfolio",
    "rpy2",
]

[tool.uv]
package = false
